--- a/livepoll/pom.xml
+++ b/livepoll/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv</artifactId>
-            <version>1.4.2</version>
+            <version>1.5.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
@@ -55,31 +55,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-
-
-
-
         <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <groupId>org.bytedeco</groupId>
             <artifactId>ffmpeg</artifactId>
-            <version>4.0.1-1.4.2</version>
+            <version>4.3.1-1.5.4</version>
         </dependency>
-        <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>ffmpeg</artifactId>
-            <version>4.0.1-1.4.2</version>
-            <classifier>linux-x86_64</classifier>
-        </dependency>
-
-
         <dependency>
             <groupId>org.jcodec</groupId>
             <artifactId>jcodec</artifactId>
             <version>0.2.5</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.mp4parser</groupId>
             <artifactId>isoparser</artifactId>
@@ -94,6 +79,11 @@
             <groupId>org.mp4parser</groupId>
             <artifactId>streaming</artifactId>
             <version>1.9.41</version>
+        </dependency>
+        <dependency>
+            <groupId>io.lindstrom</groupId>
+            <artifactId>mpd-parser</artifactId>
+            <version>0.8</version>
         </dependency>
     </dependencies>
 </project>
