--- a/livepoll-codec/pom.xml
+++ b/livepoll-codec/pom.xml
@@ -44,6 +44,22 @@
             <artifactId>jain-sip-ri</artifactId>
             <version>1.2.96</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mp4parser</groupId>
+            <artifactId>isoparser</artifactId>
+            <version>1.9.56</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mp4parser</groupId>
+            <artifactId>muxer</artifactId>
+            <version>1.9.56</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mp4parser</groupId>
+            <artifactId>streaming</artifactId>
+            <version>1.9.56</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
