--- a/livepoll-codec/pom.xml
+++ b/livepoll-codec/pom.xml
@@ -44,21 +44,10 @@
             <artifactId>jain-sip-ri</artifactId>
             <version>1.2.96</version>
         </dependency>
-
         <dependency>
-            <groupId>org.mp4parser</groupId>
-            <artifactId>isoparser</artifactId>
-            <version>1.9.56</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mp4parser</groupId>
-            <artifactId>muxer</artifactId>
-            <version>1.9.56</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mp4parser</groupId>
-            <artifactId>streaming</artifactId>
-            <version>1.9.56</version>
+            <groupId>org.revo.streamer</groupId>
+            <artifactId>livepoll-mpeg2ts</artifactId>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
     <build>
