--- a/livepoll-mpeg2ts/pom.xml
+++ b/livepoll-mpeg2ts/pom.xml
@@ -11,6 +11,7 @@
             <groupId>org.mp4parser</groupId>
             <artifactId>streaming</artifactId>
             <version>1.9.56</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
