--- a/livepoll-codec/pom.xml
+++ b/livepoll-codec/pom.xml
@@ -49,6 +49,37 @@
             <artifactId>livepoll-mpeg2ts</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <classifier>linux-x86</classifier>
+            <version>6.0-1.5.9</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.spf4j</groupId>
+            <artifactId>spf4j-core</artifactId>
+            <version>8.9.8</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.spf4j.avro</groupId>
+                    <artifactId>core-schema</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.avro</groupId>
+                    <artifactId>avro</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
