--- a/livepoll-codec/pom.xml
+++ b/livepoll-codec/pom.xml
@@ -30,6 +30,11 @@
             <version>2.6</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+        <dependency>
             <groupId>io.lindstrom</groupId>
             <artifactId>m3u8-parser</artifactId>
             <version>0.24</version>
